# ResumoCriptografico

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: enforce-issue-link.yml  publish.yml  sanitizers.yml
include/: Resumo.h
src/: Resumo.cpp  Resumo.h  main.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/resources/arquivos/: resultado.txt
test_package/resources/cmake/: resumoConfig.cmake  resumoTargets.cmake.in
test_package/src/: example.cpp  teste.cpp
test_package/src/UnitTests/include/: ResumoMacros.h  ResumoTest.h
test_package/src/UnitTests/src/: ResumoTest.cpp  ResumoTest.h
